Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.4(EOL)
-
None
Description
There is a bug in retry handling in parallel replication when --gtid-ignore-duplicates, in the function retry_event_group().
Calling cleanup_context() releases the domain (release_domain_owner()). But the code does not re-check the domain with check_duplicate_gtid() before retrying the event. If another master connection obtains the domain in the meantime, this means that the event could be double-applied (once in the retry and once normally in the other connection), which could lead to eg. "duplicate key" error for an INSERT or even silently diverge the slave from the master.
Attachments
Issue Links
- causes
-
MDEV-24622 Replication does not support bulk insert into empty table
-
- Closed
-